# ExpAVX512

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  benchmark.cpp
include/: ExpAVX512.hpp
test/: CMakeLists.txt  accuracy_test.cpp
